--- a/config/defaults.yml
+++ b/config/defaults.yml
@@ -2,6 +2,7 @@ search_term: open data
 search_count: 100
 ignore_spaces: true
 save_file: last.tweet
+seen_tweets: seen.tweets
 replacements:
   - open data: Taylor Swift
   - opendata: TaylorSwift
