--- a/config/defaults.yml
+++ b/config/defaults.yml
@@ -8,3 +8,4 @@ replacements:
   - opendata: TaylorSwift
 interval: 60 #seconds
 similarity_weighting: 4 # how many words a tweet must overlap already-seen tweets by for us to consider it 'similar'
+reject_long_tweets: true
